Serifu.Web/Assets/global.css
@font-face {
  font-family: 'Merriweather-Override';
  src: url('./fonts/Merriweather-Override.woff2') format('woff2');
  unicode-range: U+2D, U+5F, U+40, U+FF20;
}

:root {
  --page-width: 920px;
  --body-padding: 1em;
  --popover-background: #1c1c1c;
  --menu-hover-background: #414141;

  /* Scale top margin to match space on left/right on smaller viewports (we need this for the background offset too) */
  --header-margin-top: clamp(0.25em, (100vw - var(--page-width)) / 2 - var(--body-padding), 96px);

  /* Merriweather's lowercase 'g' renders weird in Chrome at 15px */
  --font-size-smallish: 15.1px;

  /* ActiveText is blue in Chrome for some reason */
  --active-link-color: #ff9e9e;

  font-size: 16px;
  font-optical-sizing: auto;
  font-synthesis: none;
  font-variant-numeric: oldstyle-nums; /* Default for Merriweather, specified for fallback */
  line-height: 1.6;
  color: #f2f2f2;
  visibility: visible !important;

  background-color: #111; /* Background color also set in layout <style> to prevent white flash */
  background-image: url(./images/dragonsreach.png); /* Any browser that supports AVIF should also support image-set */
  background-image: image-set(
    url(./images/dragonsreach.avif) type('image/avif'),
    url(./images/dragonsreach.png) type('image/png'));
  background-repeat: no-repeat;
  background-attachment: fixed;
  /* Start scaling just below Rin's feet, keeping bottom edge anchored relative to viewport as header shrinks */
  background-size: auto calc(min(1440px, 180vh - 360px) + ((96px - var(--header-margin-top)) * 2));
  background-position-x: calc(50% + min(460px, 30vw));
  background-position-y: calc(
    /* Keep top edge anchored relative to header (margin-top scales linearly with viewport width between two points) */
    ((var(--header-margin-top) - 96px) * 1.6666)
    /* Offset, scaling w/ viewport to keep Rin's full body in frame (between search box and bottom edge of window) */
    + max(-204px, -51.3333vh + 309.3333px)
  );
  overflow-y: scroll; /* Prevents the background from shifting when navigating to a page with a scrollbar */
}

/* I spent two full days trying to get an AVIF to display correctly in Firefox. Four different encoders, every possible
 * encoding parameter, hours spent tweaking the source image in different ways hoping to find something that worked...
 * in the end I had to accept it: Firefox's image rendering is simply broken. So now I have to resort to the equivalent
 * of IE conditional comments and serve Firefox users a different, much larger image instead. With all the Firefox bugs
 * I've encountered throughout this project, supporting Firefox these days is really starting to feel like supporting IE
 * did back in the early 2010s ("graceful degradation" and all that). */
@-moz-document url-prefix('') {
  :root {
    background-image: url(./images/dragonsreach.png);
  }
}

[lang='en'] {
  font-family: 'Merriweather-Override', 'Merriweather', serif;
  font-size-adjust: 0.555;
}

[lang='ja'] {
  font-family: 'Noto Serif JP', serif;
  font-size-adjust: none;
}

b, strong, h2, h3, th {
  font-family: sans-serif;
  font-size-adjust: none;
  font-variant-numeric: normal;
}

body {
  max-width: var(--page-width);
  margin: 0 auto;
  padding: var(--body-padding);
}

main {
  margin: 2.5em 0 var(--header-margin-top); /* Match top margin (footer will override if present) */

  @media (max-width: 750px) {
    margin: 1.5em 0 2.5em;
  }
}

a {
  color: inherit;

  &:active {
    color: var(--active-link-color);
  }

  &:lang(ja) {
    text-underline-offset: 2px;
  }
}

rt {
  user-select: none;
}

p, li {
  margin: 1em 0;
}

h2 {
  margin-block-start: 1em;
  margin-block-end: -0.25em;
}

mark {
  --highlight-color: #806f18a8;

  background: var(--highlight-color);
  color: inherit;

  &:lang(en) {
    box-shadow: 0 -0.1em 0 var(--highlight-color), 0 0.1em 0 var(--highlight-color);
  }
}

.narrow {
  max-width: 520px;
  margin: 0 auto;
  text-align: justify;
}

